add: tcp、grpc 添加、修改接口
